[package]
name = "cov_viz_manifest"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
cov_viz_ds = { git = "https://github.com/ReddyLab/cov_viz_ds", rev = "0c58442bbef49acecb7ab2b5d7e2c150adaa61b5" }
# cov_viz_ds = { path = "../cov_viz_ds" } # For working with a local copy during development
exp_viz = { git = "https://github.com/ReddyLab/exp_viz", rev = "a66cadd178a68d0143e8d1e70ce881b4d26e1caa" }
# exp_viz = { path = "../exp_viz" }                      # For working with a local copy during development
rustc-hash = "1.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
